--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -26,6 +26,7 @@
     "@types/react": "*",
     "@types/react-dom": "*",
     "postcss": "*",
+    "autoprefixer": "*",
     "tailwindcss": "*",
     "eslint": "*",
     "eslint-config-next": "*",
