--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@routine-flow/playground",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -9,27 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "*",
     "@routine-flow/ui": "workspace:*",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.475.0",
+    "@radix-ui/react-slot": "*",
+    "class-variance-authority": "*",
+    "clsx": "*",
     "next": "*",
     "react": "*",
     "react-dom": "*",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "lucide-react": "*",
+    "tailwind-merge": "*",
+    "tailwindcss-animate": "*"
   },
   "devDependencies": {
-    "typescript": "*",
+    "@eslint/eslintrc": "*",
     "@types/node": "*",
     "@types/react": "*",
     "@types/react-dom": "*",
-    "postcss": "*",
     "autoprefixer": "*",
-    "tailwindcss": "*",
     "eslint": "*",
     "eslint-config-next": "*",
-    "@eslint/eslintrc": "*"
+    "typescript": "*",
+    "tailwindcss": "*",
+    "postcss": "*"
   }
 }
