feat: ui component & typography 추가

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,21 +29,27 @@
     "react-dom": "^19.0.0",
     "next": "^15.0.0"
   },
+  "dependencies": {
+    "@radix-ui/react-slot": "*",
+    "@radix-ui/react-label": "*",
+    "@radix-ui/react-select": "*",
+    "lucide-react": "*",
+    "tailwind-merge": "*",
+    "tailwindcss-animate": "*"
+  },
   "devDependencies": {
     "@eslint/eslintrc": "*",
-    "@radix-ui/react-slot": "*",
     "@types/node": "*",
     "@types/react": "*",
     "@types/react-dom": "*",
     "autoprefixer": "*",
     "class-variance-authority": "*",
     "clsx": "*",
-    "eslint": "*",
-    "eslint-config-next": "*",
-    "lucide-react": "*",
     "next": "*",
     "react": "*",
     "react-dom": "*",
+    "eslint": "*",
+    "eslint-config-next": "*",
     "tailwind-merge": "*",
     "tailwindcss": "*",
     "tailwindcss-animate": "*",
