--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -10,15 +10,9 @@
   },
   "dependencies": {
     "@routine-flow/ui": "workspace:*",
-    "@radix-ui/react-slot": "*",
-    "class-variance-authority": "*",
-    "clsx": "*",
     "next": "*",
     "react": "*",
-    "react-dom": "*",
-    "lucide-react": "*",
-    "tailwind-merge": "*",
-    "tailwindcss-animate": "*"
+    "react-dom": "*"
   },
   "devDependencies": {
     "@eslint/eslintrc": "*",
