--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -30,20 +30,23 @@
     "next": "^15.0.0"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.0.0",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-label": "*",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "*",
     "@radix-ui/react-slot": "^1.1.2",
     "date-fns": "^4.1.0",
     "lucide-react": "*",
     "react-day-picker": "8.10.1",
+    "react-hook-form": "^7.54.2",
     "tailwind-merge": "*",
     "tailwindcss-animate": "*",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "*",
