--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -46,8 +46,10 @@
     "@radix-ui/react-slot": "^1.1.2",
     "date-fns": "^4.1.0",
     "lucide-react": "*",
+    "next-themes": "^0.4.4",
     "react-day-picker": "8.10.1",
     "react-hook-form": "^7.54.2",
+    "sonner": "^1.7.4",
     "tailwind-merge": "*",
     "tailwindcss-animate": "*",
     "vaul": "^1.1.2",
