--- a/package.json
+++ b/package.json
@@ -14,17 +14,9 @@
   },
   "type": "module",
   "dependencies": {
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-select": "^2.1.6",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -34,27 +26,23 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
+    "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
   "resolutions": {
     "@eslint/eslintrc": "^3",
-    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.6",
-    "lucide-react": "^0.475.0",
+    "autoprefixer": "^10.4.16",
     "next": "15.1.6",
-    "postcss": "^8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.2.1",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.6",
+    "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5"
   }
 }
