--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,28 +1,17 @@
 {
   "name": "@routine-flow/ui",
   "version": "0.0.1",
-  "private": true,
   "type": "module",
+  "private": true,
   "sideEffects": false,
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
-    },
-    "./index.css": "./dist/index.css"
-  },
-  "files": [
-    "dist"
-  ],
   "scripts": {
-    "build": "tsup",
-    "dev": "tsup --watch",
-    "clean": "rm -rf dist",
     "lint": "eslint \"src/**/*.ts*\""
+  },
+  "exports": {
+    "./styles.css": "./styles.css",
+    "./lib/*": "./src/lib/*.ts",
+    "./components/*": "./src/components/*.tsx",
+    "./hooks/*": "./src/hooks/*.ts"
   },
   "peerDependencies": {
     "react": "^19.0.0",
@@ -30,6 +19,8 @@
     "next": "^15.0.0"
   },
   "dependencies": {
+    "@date-fns/tz": "^1.2.0",
+    "@date-fns/utc": "^2.1.0",
     "@hookform/resolvers": "^4.0.0",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -40,7 +31,7 @@
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
-    "@radix-ui/react-select": "*",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
@@ -50,14 +41,16 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
-    "lucide-react": "*",
+    "lucide-react": "^0.475.0",
     "next-themes": "^0.4.4",
     "react-day-picker": "8.10.1",
     "react-hook-form": "^7.54.2",
     "sonner": "^1.7.4",
-    "tailwind-merge": "*",
-    "tailwindcss-animate": "*",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
@@ -67,17 +60,12 @@
     "@types/react": "*",
     "@types/react-dom": "*",
     "autoprefixer": "*",
-    "class-variance-authority": "*",
-    "clsx": "*",
     "next": "*",
     "react": "*",
     "react-dom": "*",
     "eslint": "*",
     "eslint-config-next": "*",
-    "tailwind-merge": "*",
     "tailwindcss": "*",
-    "tailwindcss-animate": "*",
-    "tsup": "^8.0.2",
     "typescript": "*",
     "postcss": "*"
   }
