--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -45,6 +45,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
+    "lodash-es": "^4.17.21",
     "lucide-react": "^0.475.0",
     "next-themes": "^0.4.4",
     "react-day-picker": "8.10.1",
@@ -58,17 +59,18 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "*",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "*",
     "@types/react": "*",
     "@types/react-dom": "*",
     "autoprefixer": "*",
-    "next": "*",
-    "react": "*",
-    "react-dom": "*",
     "eslint": "*",
     "eslint-config-next": "*",
+    "next": "*",
+    "postcss": "*",
+    "react": "*",
+    "react-dom": "*",
     "tailwindcss": "*",
-    "typescript": "*",
-    "postcss": "*"
+    "typescript": "*"
   }
 }
